--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@mui/icons-material": "^7.3.8",
     "@mui/material": "^7.3.8",
     "@reduxjs/toolkit": "^2.11.2",
-    "@studio-freight/lenis": "^1.0.42",
     "formik": "^2.4.9",
+    "lenis": "^1.3.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
